# sherlock

./: HMM_PSP_interactive.py  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: draft-pdf.yml
auxiliary/: generate_freq_dict.py
example_expected_output/: PSP_KIC007760680_strategy_5_l1m1_test.pkl
example_input_data/: amplitudes_frequencies_phases_KIC007760680_strategy_5.asc
paper/: paper.bib  paper.md
sherlock/: HMM_PSP_interactive.py
tests/: test_sherlock.py
